﻿The QA40xPlot Changelog
--------------------------------------------
This changelog shows the changes made for each version
--------------------------------------------
v 1.1.22
- add an Apply button to the color picker, remember window
- add two configurations (LightView and DarkView) as examples
v 1.1.21
- add a couple of fields to Settings display
- improve localization of values shown in data summary box and entries
- support flip of percent/v in data summary box also when stopped and in ghosts
- slight change to thd calculation for spectrum
- change intermodulation distortion summary values to the right values
v 1.1.20
- add microphone compensation to response test and settings
	this uses linear frequency interpolation of the loaded compensation file
- add data summary box to the scope test
	very preliminary, but working
- line up gui fields more uniformly
- fix (more) .using amplifier load. for Impedance test
- let user set windowing in frequency response test
- improve .get. display putting name on its own line
- improve accuracy of output gain determination for frequency response test
v 1.1.19
- start using the 4 term version # from the installer
- Repair the constant overlaying for both THDvsAmp and THDvsFreq
- add a bunch of tooltips including to the data summary box
- improve binning of sweep frequencies
v 1.1.18
- fix left/right swap of noise floor
- repair up-down control positioning on-screen
- save current window size and position in configuration
- enhance color picker transparency display
- enhance plot color choices
- add multitone (30 logarithmic spaced sines) waveform 
   warning->much higher total power than a sine wave
- improve auto attenuation math
- fix enbw missing in noise floor and thd+n math
v 1.1.17
- add unit conversion to voltage inputs (not serialized yet)
v 1.1.16
- fix the impedance cursor phase math
- swap to not using deploy suffix but set all git to binary
v 1.1.15
- enable saving loaded tests